[package]
name = "pet-of-the-day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
ed25519-dalek = "2.0.0-rc.3"
serenity = "0.11.6"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
env-config = "0.2.0"
doc-writer = "0.2.0"
hex = "0.4.3"